--- a/docs/write_up/SupplementaryTablesandFigures.tex
+++ b/docs/write_up/SupplementaryTablesandFigures.tex
@@ -35,9 +35,12 @@
 
 \beginsupplement
 
-\begin{figure}
+
+%% Figures %%
+
+\begin{figure}[!ht]
 \begin{center}
-	\includegraphics[width = \linewidth]{figures/Epsilon1Epsilon2_Correlations_blank}
+	\includegraphics[width = \linewidth]{"figures/Suppl - Epsilon1Epsilon2_Correlations_blank"}
 	\label{fig:S1}
 	\caption{Inter-species correlations for (a) spatio-temporal encounter
 		probability and b) spatio-temporal density.  Species-groups are
@@ -47,7 +50,36 @@
 	\end{center}
 \end{figure}
 
+\begin{figure}
+\begin{center}
+	\includegraphics[width = 0.8\linewidth]{"figures/Suppl - SpatioTempLoadingsEpsilon1"}
+	\label{fig:S2}
+	\caption{Spatial Loadings for first three factors every five years for
+	spatio-temporal encounter probability}
+	\end{center}
+\end{figure}
 
+\begin{figure}
+\begin{center}
+	\includegraphics[width = 0.8\linewidth]{"figures/Suppl - SpatioTempLoadingsEpsilon2"}
+	\label{fig:S3}
+	\caption{Spatial Loadings for first three factors every five years for
+	spatio-temporal density probability}
+	\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+	\includegraphics[width = 0.9\linewidth]{"figures/Suppl - QEstimatesALL"}
+	\label{fig:S4}
+	\caption{Fixed effect estimates for surveys for each species-group. Note
+	all values within a species-group are relative to the CEXP survey}
+	\end{center}
+\end{figure}
+
+
+
+%% Tables %%
 \begin{table}
 	\caption{List of survey codes, names and brief description}
 	\center
